Fix overlapping pedalboards

--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -58,6 +58,7 @@
     right: 0px;
     top: 45px;
     bottom: 45px;
+    overflow: auto;
     background: #111 url(../img/watermark.png) 100% 100% no-repeat;
     padding-top: 1.5%;
     .pedalboard {
