--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6771,6 +6771,7 @@ button.close {
   right: 0px;
   top: 45px;
   bottom: 45px;
+  overflow: auto;
   background: #111111 url(../img/watermark.png) 100% 100% no-repeat;
   padding-top: 1.5%;
 }
